gap fix

--- a/src/components/talent-calculator/changed-select/changed-select.module.css
+++ b/src/components/talent-calculator/changed-select/changed-select.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 1rem;
+  gap: 0.5rem;
   margin: 0 2rem 1rem;
 }
 
